--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,18 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
   padding: 0;
+}
+
+.home {
+  display: block;
 }
