--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap");
 
 .main-header {
   display: block;
@@ -14,8 +14,6 @@
   max-width: 1320px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 8px;
-  padding-right: 8px;
   width: 100%;
 }
 
