--- a/src/styles/createpost.css
+++ b/src/styles/createpost.css
@@ -25,7 +25,8 @@
 }
 
 .create-post-container input,
-textarea {
+textarea,
+select {
   border: 1px solid #000;
   background-color: #fff;
   padding: 14px 12px;
@@ -39,6 +40,16 @@ textarea {
 
 .create-post-container form button {
   width: fit-content;
+}
+
+#image {
+  width: fit-content;
+}
+
+.create-post-container select {
+  width: 30%;
+  background-color: #fff;
+  color: #000;
 }
 
 .error {
