--- a/src/styles/recent.css
+++ b/src/styles/recent.css
@@ -122,3 +122,14 @@
   height: 44px;
   width: 25%;
 }
+
+.end-btn-container {
+  text-align: center;
+  margin-top: -30px;
+  max-width: 380px;
+}
+
+.large {
+  font-size: 16px !important;
+  padding: 20px 45px !important;
+}
