--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,13 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap");
 
-.main-header {
+header {
   display: block;
   background: #fff;
   border-top: 2px solid #000;
   position: sticky;
   top: 0;
-  transition: 0.3s ease-in-out;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
   z-index: 100;
+}
+
+.shadow {
+  transition: 0.3s ease-in-out;
+  box-shadow: 0 2px 8px 1px rgba(13, 43, 90, 0.1);
+}
+
+.no-shadow {
+  box-shadow: none;
+}
+
+.nav-hidden {
+  transform: translateY(-100%);
 }
 
 .container {
