--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -66,6 +66,7 @@ header {
 }
 
 .logo {
+  position: relative;
   height: 60px;
   width: 400px;
 }
@@ -97,4 +98,5 @@ header {
 .login img {
   width: 20%;
   border-radius: 50%;
+  cursor: pointer;
 }
