--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -78,7 +78,7 @@
   width: 33.3%;
   border: 1px solid rgb(229, 231, 235);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
-  border-radius: 0.75rem;
+  border-radius: calc(0.5rem - 2px);
 }
 
 .card-content-top {
@@ -135,16 +135,107 @@
 .dashboard-chart {
   padding: 24px;
   border: 1px solid rgb(229, 231, 235);
-  border-radius: 0.75rem;
+  border-radius: calc(0.5rem - 2px);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
 }
 
 .dashboard-post-img-container {
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
 }
 
 .dashboard-post-img-container img {
   max-width: 100%;
   max-height: 100%;
+  border-radius: calc(0.5rem - 4px);
+}
+
+.dashboard-recent-posts {
+  font-family: "Nunito", sans-serif;
+  padding: 32px 0 0 0;
+}
+
+.dashboard-recent-posts h3 {
+  font-size: 24px;
+}
+
+.dashboard-recent-posts p {
+  color: #8d8d94;
+  margin-bottom: 16px;
+}
+
+table {
+  width: 100%;
+  border: 1px solid rgb(229, 231, 235);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+  border-radius: calc(0.5rem - 2px);
+}
+
+thead {
+  text-align: left;
+}
+
+thead tr {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  height: 2.5rem;
+}
+
+tbody tr {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+}
+
+table thead th {
+  padding: 0.5rem;
+  color: #8d8d94;
+}
+
+table thead th:nth-child(1) {
+  padding-right: 4rem;
+}
+
+table tbody td {
+  padding: 0.5rem;
+  border-top: 1px solid rgb(229, 231, 235);
+}
+
+.dashboard-category {
+  width: fit-content;
+  padding: 2px 10px;
+  border: 1px solid rgb(229, 231, 235);
+  border-radius: calc(0.5rem - 2px);
+}
+
+.pending {
+  padding: 2px 10px;
+  font-weight: 500;
+  background-color: #fff8dd;
+  border-radius: calc(0.5rem - 2px);
+  color: #f2cb0e;
+  width: fit-content;
+}
+
+.btn-accept,
+.btn-decline,
+.btn-review {
+  padding: 5px 15px;
+  font-weight: 600;
+  margin-right: 5px;
+  border: none;
+  background-color: transparent;
+  border: 1px solid #56cf8e;
+  border-radius: calc(0.5rem - 2px);
+  color: #56cf8e;
+  cursor: pointer;
+}
+
+.btn-decline {
+  border-color: #f1416c;
+  color: #f1416c;
+}
+
+.btn-review {
+  border-color: #000;
+  color: #000;
 }
