--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -104,6 +104,7 @@
   text-align: center;
   font-family: "Nunito", sans-serif;
   font-weight: 700;
+  z-index: 10;
 }
 
 .card-content-value::before {
