--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -135,9 +135,16 @@
 
 .dashboard-chart {
   padding: 24px;
+  width: 55%;
   border: 1px solid rgb(229, 231, 235);
   border-radius: calc(0.5rem - 2px);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+}
+
+.dashboard-chart h3 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  padding-bottom: 24px;
 }
 
 .dashboard-post-img-container {
