Created notes, when rejecting post you have to leave note why post was rejected, created popup window for that, note will be shown in post review

--- a/src/styles/currentPost.css
+++ b/src/styles/currentPost.css
@@ -150,3 +150,13 @@
   display: flex;
   gap: 32px;
 }
+
+.decline_note {
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+  color: red;
+  margin: 20px;
+}
