--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -207,6 +207,10 @@ thead tr {
   height: 2.5rem;
 }
 
+tbody {
+  position: relative;
+}
+
 tbody tr {
   font-family: "Nunito", sans-serif;
   font-weight: 500;
@@ -296,4 +300,32 @@ table tbody td {
 .btn-review {
   border-color: #000;
   color: #000;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.decline-note-popup {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  min-width: 500px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
