--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -172,7 +172,8 @@
 
 .dashboard-post-img-container img {
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: calc(0.5rem - 4px);
 }
 
@@ -217,7 +218,7 @@ tbody tr {
 }
 
 table thead th {
-  padding: 0.5rem;
+  padding: 0.4rem;
   color: #8d8d94;
 }
 
@@ -226,7 +227,7 @@ table thead th:nth-child(1) {
 }
 
 table tbody td {
-  padding: 0.5rem;
+  padding: 0.4rem;
   border-top: 1px solid rgb(229, 231, 235);
 }
 
