Created read menu popup, created api endpoint for specific category blogs to fetch from database. Created specific category page to display blogs

--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -64,6 +64,12 @@
   font-weight: 300;
 }
 
+.list-item-featured h4:hover,
+.list-item-featured p:hover,
+.badge-row a:hover {
+  color: #505050;
+}
+
 .post-thumbnail-container {
   position: relative;
   text-align: center;
