--- a/src/styles/recent.css
+++ b/src/styles/recent.css
@@ -160,3 +160,11 @@
   font-size: 16px !important;
   padding: 20px 45px !important;
 }
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin-top: -30px;
+}
