--- a/src/styles/createpost.css
+++ b/src/styles/createpost.css
@@ -64,3 +64,9 @@ select,
   width: fit-content;
   padding: 8px 12px;
 }
+
+@media (max-width: 991px) {
+  .create-post-container {
+    padding: 30px 0;
+  }
+}
