--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -330,3 +330,82 @@ table tbody td {
   min-width: 500px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 991px) {
+  .dashboard-menu {
+    height: auto;
+    padding: 10px 16px;
+  }
+
+  .dashboard-menu ul {
+    flex-wrap: wrap;
+  }
+
+  .dashboard-content {
+    padding: 10px;
+  }
+
+  .dashboard-stat-cards {
+    flex-direction: column;
+  }
+
+  .dashboard-stat-card {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .card-content-value::before {
+    width: 35%;
+  }
+
+  .card-content-value::after {
+    width: 35%;
+  }
+
+  .dashboard-overview {
+    flex-direction: column;
+  }
+
+  .dashboard-chart {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .dashboard-category-stats {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .category-chart {
+    width: 100%;
+    height: 100%;
+  }
+
+  table thead {
+    visibility: hidden;
+    height: 0;
+    position: absolute;
+  }
+
+  table tr {
+    display: block;
+    margin-bottom: 15px;
+  }
+
+  table td {
+    border-bottom: none;
+    display: block;
+    font-size: 0.8em;
+    text-align: left;
+  }
+
+  table td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  table td:last-child {
+    border-bottom: 3px solid rgb(229, 231, 235);
+  }
+}
