--- a/src/styles/featured.css
+++ b/src/styles/featured.css
@@ -89,3 +89,14 @@ iframe {
   width: 100%;
   height: 100%;
 }
+
+@media (max-width: 991px) {
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .button {
+    margin: 0 auto;
+  }
+}
