--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -120,6 +120,7 @@ header {
   position: relative;
   height: 60px;
   width: 400px;
+  text-align: center;
 }
 
 .logo-object {
@@ -150,4 +151,28 @@ header {
   width: 17%;
   border-radius: 50%;
   cursor: pointer;
+}
+
+@media (max-width: 991px) {
+  .container {
+    padding: 0 36px;
+  }
+
+  .menu-toggles {
+    min-width: 0;
+  }
+
+  .logo {
+    height: 30px;
+    width: 150px;
+  }
+
+  .login {
+    min-width: 70px;
+    width: 70px;
+  }
+
+  .login img {
+    width: 50%;
+  }
 }
