Created form with emailjs, now people can subscribe to website

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -46,6 +46,10 @@ footer {
   margin-bottom: 21px;
 }
 
+form button {
+  margin-top: 21px;
+}
+
 .form input {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
